2014-07-10  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_field1.php: Updated help.

2014-07-09  Mario Pulido <mario.pulido@artica.es>

        * include/help/ja/help_snmp_alert_field1.php: Added macros snmp alert help

2014-07-09  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_field1.php: Updated help.

2014-07-09  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_events.php, operation/events/events.php,
	operation/events/events_list.php: Replaced json_encode()
	with io_json_mb_encode() to avoid invalid encoding with multi-byte
	characters.

2014-07-08  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_snmp_alert_field1.php,
	include/help/es/help_snmp_alert_field1.php: Change macros snmp alert help

2014-07-08 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Fixed that 'set enable_module'
	had not worked.

	MERGED FROM BRANCH 5.0

2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: show in the tooltip of
	"static graph" the last value of module.
	
	INCIDENT: #1014 

2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/license.php: fixed the white screen.
	
	INCIDENT: #996

2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/alerts_status.php: fixed the pagination with
	the column sorted.
	
	INCIDENT: #977

2014-07-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Now the shortcut bar isn't loaded while
	the pandora console is in fullscreen mode.

2014-07-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php: When drawing charts, propagate the last value
	  in the database instead of the value of the last interval (which is the
	  average value for that interval).

	* operation/agentes/estado_monitores.php: Show events for boolean modules by default.

2014-07-04  Miguel de Dios <miguel.dedios@artica.es>
	