@@ -1,3 +1,8 @@
+2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: restored the parameter name server in
+	the api call "set_new_agent", thanks KOSAKA.
+
 2014-07-10  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/help/ja/help_snmp_alert_field1.php: Updated help.
